focus, enter key

--- a/converter.htm
+++ b/converter.htm
@@ -7,7 +7,7 @@
 </head>
 <body>
 <label>Please enter a dollar amount: <input type="text" id="dollarInput" size="20" maxlength="20"/></label>
-<input type="button" value="Convert" onclick="convertToText()" />
+<input type="button" class="defaultButton" value="Convert" onclick="convertToText()" />
 <div id="Result">
 </div>
 </body>
