Spiral exercise, just for fun

--- a/converter.htm
+++ b/converter.htm
@@ -4,11 +4,12 @@
     <title>Untitled Page</title>
     <script type="text/javascript" src="Libraries/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="converter.js"></script>
+    <script type="text/javascript" src="utility.js"></script>
 </head>
 <body>
-<label>Please enter a dollar amount: <input type="text" id="dollarInput" size="20" maxlength="20"/></label>
-<input type="button" class="defaultButton" value="Convert" onclick="convertToText()" />
-<div id="Result">
-</div>
+    <label>Please enter a dollar amount: <input type="text" id="DollarInput" size="20" maxlength="20"/></label>
+    <input type="button" class="defaultButton" value="Convert" onclick="convertToText()" />
+    <div id="Result">
+    </div>
 </body>
 </html>
